Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.10.1, 5.15.7
-
Fix Version/s: 5.15.8, 6.2.3, 6.3.0 Alpha
-
Component/s: Virtual Keyboard, Widgets: GraphicsView
-
Labels:
-
Environment:Ubuntu 16.04
-
Platform/s:
-
Commits:625cfb6b400a88b26b7295f21699c9db28b71483 (qt/qtbase/dev) 3421d2b284a5e50fa780346e42b50a5803320c0d (qt/qtbase/6.2) 6dda55afeaaf5a6e061e6254ffb3f240130d9bb6 (qt/tqtc-qtbase/5.15)
Description
We are trying to support CJK (Chinese, Japanese and Korean) input using Qt VKB.
Our applications are C++ applications and not QML.
So we have a hybrid (C++ and QML) application.
We are using QML only for Qt VKB.
However, we have observed that "Combination of 'HangulInputMethod' and 'QGraphicsTextItem' does not work as expected."
You may need to recompile Qt VKB to add all supported languages.
I have added the following code at the start of
"Qt/5.10.1/Src/qtvirtualkeyboard/src/config.pri"
OR
"Qt/5.15.7/Src/qtvirtualkeyboard/src/config.pri"
CONFIG += lang-all CONFIG += disable-desktop
The EXPECTED behavior is QT_VKB_CJK_QWIDGET_TEST_APP
The INCORRECT behavior is QT_VKB_QGRAPHICS_TEXT_ITEM_TEST_APP
Attachments
For Gerrit Dashboard: QTBUG-98544 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
382900,2 | QGraphicsItem: Update input context after InputMethod event | dev | qt/qtbase | Status: MERGED | +2 | 0 |
383456,2 | QGraphicsItem: Update input context after InputMethod event | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
383459,2 | QGraphicsItem: Update input context after InputMethod event | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |