QGraphicsItem: Update input context after InputMethod event

Without updating the input context, the input method goes out of sync
with the text control.

Fix by updating the input context after InputMethod event.

Fixes: QTBUG-98544
Change-Id: Idfb99bb0f886249cdab923b8dbed96277800c064
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 625cfb6b400a88b26b7295f21699c9db28b71483)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>